# liknorm

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  GITHUB_URL  LICENSE.md  LICENSE.txt  Makefile  NAME  README.md  README.rst  VERSION  appveyor.yml  bernoulli.h  binomial.c  binomial.h  bracket.c  bracket.h  brent.c  brent.h  expfam.h  exponential.c  exponential.h  func_base.h  gamma.c  gamma.h  geometric.c  geometric.h  gfunc.c  gfunc.h  hope.h  install  install.bat  integrate.c  integrate.h  interval.c  interval.h  liknorm-config.cmake.in  liknorm.c  liknorm.h  (+16 more)
.github/workflows/: cmake.yml  deploy.yml  test.yml
cmake/: CPM.cmake  FindHCEPHES.cmake  limix.cmake
doc/: Makefile  conf.py  index.rst  make.bat
docs/: Doxyfile  Makefile  conf.py  implementation.rst  index.rst  interface.rst  introduction.rst  usage.rst
include/: CMakeLists.txt  liknorm.h  liknorm_python.h
include/liknorm/: api.h  liknorm.h  platform.h
lib/: logaddexp.h  normal.h
liknorm/: CMakeLists.txt  compiler.h  constants.h  definitions.h  expfam.h  gfunc.c  gfunc.h  integrate.c  integrate.h  interval.c  interval.h  liknorm.c  liknorm.h  log_partitions.h  logaddexp.h  machine.h  normal.c  normal.h
liknorm/binomial/: base.c  base.h  moments.c
liknorm/binomial/test/: test_moments.py
liknorm/optimizer/: CMakeLists.txt  bracket.c  bracket.h  brent.c  brent.h  optimizer.h
liknorm/partition/: CMakeLists.txt  bernoulli.h  binomial.c  binomial.h  exponential.c  exponential.h  gamma.c  gamma.h  geometric.c  partition.h  poisson.c  poisson.h
liknorm/util/: base.c  limix_math
old-stuff/binomial/: __init__.py  binom_moments.py  moments.c  moments.h
old-stuff/binomial/test/: test_lmath.py
old-stuff/util/: base.h
src/: CMakeLists.txt  base.c  base.h  compiler.h  expfam.h  gfunc.c  gfunc.h  hide.h  integrate.c  integrate.h  interval.c  interval.h  liknorm.c  liknorm_impl.h  liknorm_python.c  logaddexp.h  machine.h  main.c  normal.c  normal.h  optimizer.h  report.c  report.h  sign.h
src/optimizer/: bracket.c  bracket.h  brent.c  brent.h  func_base.h  optimizer.h  zero.c  zero.h
src/partition/: bernoulli.h  binomial.c  binomial.h  exponential.c  exponential.h  gamma.c  geometric.c  geometric.h  nbinomial.c  nbinomial.h  partition.h  poisson.c  poisson.h
test/: CMakeLists.txt  benchmark.h  integration.c  logprod.c  specific.c  table.csv  table_small.csv  test_binomial.c  test_binomial_normal.c  test_binomial_speed.c  test_integration.c  test_linking.c  test_specific.c  test_speed.c
test/data/: table.csv
test/src/: cass.h  integration.c  linking.c  logprod.c  specific.c
